--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,12 @@ body{
     width: 100%;
     background-color: #265e3d;
     height:55px;
+    margin:0px;
 }
 
     .head .top-nav {
         display: flex;
+        padding:10px;
         width: 100%;
         background-color: #265e3d;
         color: white;
@@ -87,7 +89,7 @@ body{
     border-radius: 5px;
     border:none;
     font-size: 15px;
-    margin-bottom:5px;
+    margin-bottom:0px;
     padding:10px;
     cursor: pointer;
     transition:all ease 0.3s;
@@ -145,7 +147,7 @@ body{
 
 .form-group
 {
-    width: 100%;
+    width: 80%;
     position: relative;
     margin-bottom:0px;
 }
@@ -184,17 +186,20 @@ body{
   .enqry-form button{
     font-size: 15px;
     height: 40px;
-    width: 520px;
-    background-color: rgb(29, 83, 138);
+    background-color: #265e3d;
+    border: 2px solid #f69024;
     color: white;
     font-weight: 600;
     border-radius: 5px;
+    padding: 5px;
   }
 
   .enqry-form button:hover{
-    background-color:#265e3d;
+    background-color: white;
+    color: #f69024;
     cursor: pointer;
   }
+
 
   .enqry-form .form-group input:placeholder-shown+ label{
     top:11px;
@@ -236,7 +241,7 @@ body{
 }
 
 figure img{
-    width:380px;
+    width:400px;
     height: auto;
     padding:0px;
     background-size: cover;
@@ -340,8 +345,8 @@ figure img{
 }
 .whatsapp{
     position: fixed;
-    right:5px;
-    margin-top:30px;
+    right:0px;
+    margin-top:330px;
     height: 50px;
     width: 50px;
     z-index: 5;
@@ -354,7 +359,7 @@ figure img{
 }
     .whatsapp img:hover {
         transform: scale(1.1);
-        filter: drop-shadow(0px 0px 5px red);
+        filter: drop-shadow(0px 0px 5px #f69024);
     }
 
 
@@ -378,7 +383,7 @@ figure img{
     scroll-behavior:smooth;
     display: flex;
     position: relative;
-    top:10px !important;
+    top:110px !important;
     height: 500px;
     width: 100%;
     overflow: hidden;
@@ -386,7 +391,14 @@ figure img{
 }
 
 .slick-container::after{
-    content: '';
+    display: flex;
+    content: 'Admission Open 2024 - 2025';
+    color: white;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
+    font-size: 60px;
+    font-weight: 800;
     position: absolute;
     top:0;
     left:0;
@@ -404,6 +416,7 @@ figure img{
     object-position: center;
 }
 
+
 .slick-content img{
     position: relative;
     height: 500px;
@@ -418,19 +431,19 @@ figure img{
 
 
 .card-wrapper{
-    position: absolute;
     display: flex;
     flex-wrap: nowrap;
     overflow: hidden;
     justify-content: space-around;
     width:100%;
-    margin-top: -145px;
+    margin-top: -50px;
     
 }
 
 .card-wrapper .column {
-    position: relative;
+   
     width: 22%;
+    
 }
 
 .card-wrapper .column .card{
@@ -440,6 +453,7 @@ figure img{
     padding:2vw;
     font-size: 1.8vh;
     cursor: pointer;
+    height:120px;
 }
 
 .card-color-1{
@@ -504,12 +518,11 @@ figure img{
 
 .slide-container{
     width:100%;
-    margin-top:50px;
+    margin-top:30px;
     padding:10px;
     object-fit: contain;
     overflow:hidden;
-    box-shadow:  5px 5px 35px #265e3d,
-             -15px -35px 35px #ffffff;
+
 }
 
 .slide-container h1 {
@@ -544,11 +557,10 @@ figure img{
     width: 100%;
     display: flex;
     margin-top:30px;
-   
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     padding: 10px;
     background-color: #fff;
-    box-shadow: 0px 2px 30px 5px #265e3d;
+  
 }
 
 .testimonial {
@@ -586,7 +598,7 @@ figure img{
     color: white;
     justify-content: justify;
     text-align: left;
-    height: 200px;
+    height: 170px;
 }
 
 .testimonial h3 {
@@ -621,18 +633,19 @@ figure img{
 
 
  .reach-wrapper{
-    width:100%;
+    width:99.9%;
     display: flex;
+    position: relative;
     justify-content: space-between;
     align-items: center;
-   
     margin-top:20px;
-    padding:5px;
     background-color:#265e3d;
+    border: 3px white solid;
  }
 
  .reach-wrapper img{
     mix-blend-mode:screen;
+    width: 400px !important;
  }
  .reach-wrapper .content{
     
@@ -748,10 +761,12 @@ footer .copyright a:hover{
 /* Vision & Mission css start*/
 
 .vision{
-    width: 93%;
+    width: 100%;
+    position: relative;
     height: 400px;
-    margin:50px;
-    box-shadow: 0 2px 10px 0 #265e3d;
+    margin-top:110px;
+    margin-bottom:30px;
+  
 
 }
 .vision img{
@@ -762,9 +777,6 @@ footer .copyright a:hover{
     box-sizing: border-box;
     z-index: -2;
 }
-.vision:hover{
-    box-shadow: 0 2px 10px red;
-}
 
 
 
@@ -773,22 +785,20 @@ footer .copyright a:hover{
 
 
 
-
-
 /* Facility & Laboratory Page css Start*/
 
-.container-2{
+.inside-container{
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top:50px;
+    margin-top:100px;
     gap:20px 50px;
     padding: 40px;
     background-color: white;
 
 }
-.container-2 .facility{
+.inside-container .facility{
     height: 320px;
     width: 30%;
     overflow: hidden;
@@ -800,7 +810,7 @@ footer .copyright a:hover{
     border: 1px solid  whitesmoke;
 
 }
-.container-2 .facility h3{
+.inside-container .facility h3{
     color: white;
     font-size: 15px;
     line-height: 40px;
@@ -810,7 +820,7 @@ footer .copyright a:hover{
 
 }
 
-.container-2 .facility img{
+.inside-container .facility img{
     aspect-ratio: 3/2;
     width: 100%;
     object-fit: cover;
@@ -835,7 +845,7 @@ footer .copyright a:hover{
 /* Mandatory Disclosure page css start*/
 .mand-disc{
     display: flex;
-    margin-top:130px;
+    margin-top:110px;
     box-shadow:0 0 15px gray;
     width: 100%;
     justify-content: center;
@@ -865,25 +875,27 @@ footer .copyright a:hover{
 /* Contact page css start */
 
 .card-container {
+    position: relative;
+    margin-top:150px;  
     display: flex;
     flex-wrap: wrap;
     height: auto;
-    width: 93%;
+    width: 100%;
     align-items: center;
     justify-content: space-evenly;
-    margin-top:30px;  
-    margin-left: 50px;
+    
+    margin-left: 0px;
 }
 .card-container .item{
     background-color:transparent;
     display: flex;
-    margin:20px;
+    margin:10px;
     padding:15px;
-    width:200px;
+    width:25%;
     border-radius: 5px;
     text-align: center;
     flex-direction: column;
-    flex-grow:1;
+   
     color:black;
     line-height: 25px;
     word-wrap: wrap;
@@ -894,12 +906,13 @@ footer .copyright a:hover{
     box-shadow: 5px 5px 5px 5px gray;
 }
 .card-container .item i {
+    width: 50px;
     color: green;
-    transition:all ease 1s;
+    transition:all ease 0.5s;
 }
 .card-container .item:hover i{
     color:white;
-    background-color: red;
+    background-color: #f69024;
 
 }
 
@@ -960,7 +973,7 @@ footer .copyright a:hover{
     top:-15px;
     left:67px;
     font-weight: 600;
-    color: #265e3d;
+    color: #f69024;
     background-color: white;
     transition: all 0.3s ease;
 }
@@ -969,19 +982,18 @@ footer .copyright a:hover{
     height: 100px;
 }
 .form-group .row button{
-    width: 500px;
+    width: 150px;
     font-size: 18px;
     font-weight: 800;
     padding:8px 0px;
     border-radius: 5px;
-    background-color: rgb(209, 181, 181);
+    background-color: #f69024;
     transition: all 0.3s ease;
 }
 .form-group .row button:hover{
-    
-    border-color: rgb(209, 181, 181);
-    color: rgb(209, 181, 181);
-    background-color: #265e3d;
+    border-color: #f69024;
+    color: #f69024;
+    background-color: white;
     transition: all 0.3s ease;
 }
 
@@ -1349,7 +1361,7 @@ footer .copyright a:hover{
     }*/
 
     /* text-containers responsive */
-    .text-container-2{
+    .container-2{
         display: inline !important;
         margin:0;
         box-shadow:none !important;
@@ -1428,18 +1440,18 @@ footer .copyright a:hover{
         margin-left:0px;
         margin-top:50px;
     }
-    .course-container .course-bg{
+    .container-2 .course-bg{
         margin: 0px 0px !important;  
 
     }
-    .course-container .course-content{
+    .container-2 .course-content{
         display: inline !important;
         width: 100% !important;
         margin-left:20px !important;
         padding:0;
         
     }
-    .course-container .course-content h1{
+    .container-2 .heading h1{
         font-size: 20px;
     }
     .course-content p {
