--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body{
         background-color: #265e3d;
         color: white;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content:space-around;
     }
 
 .top-nav  a {
