--- a/css/common.css
+++ b/css/common.css
@@ -158,13 +158,13 @@ box-shadow: 0 4px 8px 0 #e69035;
 }
 
 
-.text-container-3{
+.text-container{
     width:100%;
     padding:20px;
     margin-top:110px;
     background:white;
  }
-.text-container-3 p {
+.text-container p {
     margin-left: 30px;
     padding-top: 10px;
     flex-wrap: wrap;
@@ -174,12 +174,12 @@ box-shadow: 0 4px 8px 0 #e69035;
     line-height: 25px;
     z-index: 5;
 }
- .text-container-3 h3 {
+ .text-container h3 {
     padding-left:30px;
     color:#265e3d;
 
  }
-.text-container-3 h1{
+.text-container h1{
     text-align: center;
     font-weight: bolder;
     padding: 20px;
