--- a/css/style.css
+++ b/css/style.css
@@ -1101,13 +1101,13 @@ footer .copyright a:hover{
         margin-top: 45px;
         padding: 0 !important;
         height: auto;
-        width: 80% !important;
+        width: 100% !important;
         overflow-x: hidden !important;
 
     }
     figure img{
 
-        width: 230px;
+        width: 350px;
         margin:0 !important;
         padding-left: 0px !important;
     }
@@ -1173,7 +1173,7 @@ footer .copyright a:hover{
             flex-direction: column !important;
             align-items: center;
             background-color: #265e3d;
-            margin-top:28px;
+            margin-top:50px;
             margin-bottom: 0px;
         }
         .head .nav-bar ul li a {
@@ -1182,10 +1182,11 @@ footer .copyright a:hover{
 
         .whatsapp{
             visibility:visible;
+            
             display: flex;
             position: absolute;
-            right:10px;
-            top:10px;
+            right:30px;
+            top:-270px;
             
             
         }
@@ -1194,29 +1195,23 @@ footer .copyright a:hover{
         visibility: hidden;
     }
     
-    .container{
-        margin-bottom:0px !important;
-    }
-
+   
     .slick-container{
         display: flex;
         width: 100%;
         margin-left:0px;
-        margin-top:50px;
+        margin-top:-23px;
         height: 300px;
     }
-    .text-content{
-        text-align: center;
-    }
-    .text-content h1{
-        padding:10px;
-        font-size: 30px;
+    .slick-container::after{
+        font-size: 45px;
     }
 
 
 
     .card-container {
         margin-left: 10px !important;
+        margin-top: 30px !important;
     }
 
         .card-container .item {
@@ -1235,6 +1230,7 @@ footer .copyright a:hover{
         width: 100%;
         height: 180px;
         margin-left: 0;
+        margin-top: 10px !important;
         box-shadow:none !important;
     }
 
@@ -1268,7 +1264,7 @@ footer .copyright a:hover{
     }
 
     .testimonial-container .testimonial {
-        width: 93%;
+        width: 98%;
         padding: 0px !important;
     }
     .testimonial p {
@@ -1316,19 +1312,20 @@ footer .copyright a:hover{
      /*contact page css Start*/
 
     .card-wrapper{
-       width: 100%;
-        margin-top: -70px;
+        width: 100%;
+        height: 70px;
+        margin-top: 30px !important;
         margin-left: 0%;
         justify-content: space-evenly;
 
     }
     .card-wrapper .column {
-        width: 23%;
+        width: 20%;
     }
    
     .card-wrapper .column .card h2,.card-wrapper .column .card h1 {
-        font-size: 8px;
-        padding:5px;
+        font-size:12px;
+        padding:0px;
         
     }
 
